optimized operator input - one function now

--- a/kalkulator_Limanowka/MainWindow.xaml
+++ b/kalkulator_Limanowka/MainWindow.xaml
@@ -27,21 +27,21 @@
         </Grid.RowDefinitions>
         <TextBox x:Name="Dzialanie" IsReadOnly="True"  TextAlignment="Right" VerticalAlignment="Bottom" FontSize="12" Background="WhiteSmoke" Grid.Row="0"  Grid.Column="0" Grid.ColumnSpan="4"></TextBox>
         <TextBox x:Name="Input" IsReadOnly="True" TextAlignment="Right" VerticalAlignment="Bottom" FontSize="50" Background="WhiteSmoke" Grid.Row="1"  Grid.Column="0" Grid.ColumnSpan="4"></TextBox>
-        <Button x:Name="but1" Grid.Row="5" Grid.Column="0" Click="ButNumClicked" Background="YellowGreen"  >1</Button>
-        <Button x:Name="but2" Grid.Row="5" Grid.Column="1" Click="ButNumClicked" Background="YellowGreen" >2</Button>
-        <Button x:Name="but3" Grid.Row="5" Grid.Column="2" Click="ButNumClicked" Background="YellowGreen" >3</Button>
-        <Button x:Name="but4" Grid.Row="4" Grid.Column="0" Click="ButNumClicked" Background="YellowGreen" >4</Button>
-        <Button x:Name="but5" Grid.Row="4" Grid.Column="1" Click="ButNumClicked" Background="YellowGreen" >5</Button>
-        <Button x:Name="but6" Grid.Row="4" Grid.Column="2" Click="ButNumClicked" Background="YellowGreen" >6</Button>
-        <Button x:Name="but7" Grid.Row="3" Grid.Column="0" Click="ButNumClicked" Background="YellowGreen" >7</Button>
-        <Button x:Name="but8" Grid.Row="3" Grid.Column="1" Click="ButNumClicked" Background="YellowGreen" >8</Button>
-        <Button x:Name="but9" Grid.Row="3" Grid.Column="2" Click="ButNumClicked" Background="YellowGreen" >9</Button>
-        <Button x:Name="but0" Grid.Row="6" Grid.Column="0" Click="ButNumClicked" Background="YellowGreen" >0</Button>
-        <Button x:Name="butplus" Grid.Row="5" Grid.Column="3" Click="ButPlusClicked" Background="LimeGreen"  >+</Button>
-        <Button x:Name="butminus" Grid.Row="4" Grid.Column="3" Click="ButMinusClicked" Background="LimeGreen">-</Button>
-        <Button x:Name="butmnoz" Grid.Row="3" Grid.Column="3" Click="ButMnozClicked" Background="LimeGreen">x</Button>
-        <Button x:Name="butdziel" Grid.Row="2" Grid.Column="3" Click="ButDzielClicked" Background="LimeGreen">/</Button>
-        <Button x:Name="butdot" Grid.Row="6" Grid.Column="1" Click="ButDotClicked" Background="YellowGreen">.</Button>
+        <Button x:Name="but1" Grid.Row="5" Grid.Column="0" Click="ButNumberClicked" Background="YellowGreen"  >1</Button>
+        <Button x:Name="but2" Grid.Row="5" Grid.Column="1" Click="ButNumberClicked" Background="YellowGreen" >2</Button>
+        <Button x:Name="but3" Grid.Row="5" Grid.Column="2" Click="ButNumberClicked" Background="YellowGreen" >3</Button>
+        <Button x:Name="but4" Grid.Row="4" Grid.Column="0" Click="ButNumberClicked" Background="YellowGreen" >4</Button>
+        <Button x:Name="but5" Grid.Row="4" Grid.Column="1" Click="ButNumberClicked" Background="YellowGreen" >5</Button>
+        <Button x:Name="but6" Grid.Row="4" Grid.Column="2" Click="ButNumberClicked" Background="YellowGreen" >6</Button>
+        <Button x:Name="but7" Grid.Row="3" Grid.Column="0" Click="ButNumberClicked" Background="YellowGreen" >7</Button>
+        <Button x:Name="but8" Grid.Row="3" Grid.Column="1" Click="ButNumberClicked" Background="YellowGreen" >8</Button>
+        <Button x:Name="but9" Grid.Row="3" Grid.Column="2" Click="ButNumberClicked" Background="YellowGreen" >9</Button>
+        <Button x:Name="but0" Grid.Row="6" Grid.Column="0" Click="ButNumberClicked" Background="YellowGreen" >0</Button>
+        <Button x:Name="butplus" Grid.Row="5" Grid.Column="3" Click="ButOperatorClicked" Background="LimeGreen"  >+</Button>
+        <Button x:Name="butminus" Grid.Row="4" Grid.Column="3" Click="ButOperatorClicked" Background="LimeGreen">-</Button>
+        <Button x:Name="butmnoz" Grid.Row="3" Grid.Column="3" Click="ButOperatorClicked" Background="LimeGreen">x</Button>
+        <Button x:Name="butdziel" Grid.Row="2" Grid.Column="3" Click="ButOperatorClicked" Background="LimeGreen">/</Button>
+        <Button x:Name="butdot" Grid.Row="6" Grid.Column="1" Click="ButOperatorClicked" Background="YellowGreen">.</Button>
         <Button x:Name="butrowna" Grid.Row="6" Grid.Column="2" Grid.ColumnSpan="2" Click="ButRownClicked" Background="LimeGreen" >=</Button>
         <Button x:Name="butoff" Grid.Row="2" Grid.Column="0" Click="ButOffClicked" Background="Gray" >OFF</Button>
         <Button x:Name="butce" Grid.Row="2" Grid.Column="1" Click="ButCeClicked" Background="Gray" >CE</Button>
