--- a/kalkulator_Limanowka/MainWindow.xaml
+++ b/kalkulator_Limanowka/MainWindow.xaml
@@ -39,9 +39,9 @@
         <Button x:Name="but0" Grid.Row="6" Grid.Column="0" Click="ButNumberClicked" Background="YellowGreen" >0</Button>
         <Button x:Name="butplus" Grid.Row="5" Grid.Column="3" Click="ButOperatorClicked" Background="LimeGreen"  >+</Button>
         <Button x:Name="butminus" Grid.Row="4" Grid.Column="3" Click="ButOperatorClicked" Background="LimeGreen">-</Button>
-        <Button x:Name="butmnoz" Grid.Row="3" Grid.Column="3" Click="ButOperatorClicked" Background="LimeGreen">x</Button>
+        <Button x:Name="butmnoz" Grid.Row="3" Grid.Column="3" Click="ButOperatorClicked" Background="LimeGreen">*</Button>
         <Button x:Name="butdziel" Grid.Row="2" Grid.Column="3" Click="ButOperatorClicked" Background="LimeGreen">/</Button>
-        <Button x:Name="butdot" Grid.Row="6" Grid.Column="1" Click="ButOperatorClicked" Background="YellowGreen">.</Button>
+        <Button x:Name="butdot" Grid.Row="6" Grid.Column="1" Click="ButDotClicked" Background="YellowGreen">.</Button>
         <Button x:Name="butrowna" Grid.Row="6" Grid.Column="2" Grid.ColumnSpan="2" Click="ButRownClicked" Background="LimeGreen" >=</Button>
         <Button x:Name="butoff" Grid.Row="2" Grid.Column="0" Click="ButOffClicked" Background="Gray" >OFF</Button>
         <Button x:Name="butce" Grid.Row="2" Grid.Column="1" Click="ButCeClicked" Background="Gray" >CE</Button>
